[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "coverage>=7.2.5",
]
qa = [
    "ruff>=0.0.263",
    "black>=23.3.0",
    "pre-commit>=3.2.2",
    "isort>=5.12.0",
    "pre-commit-hooks>=4.4.0",
    "pyright>=1.1.304",
    "nox>=2023.4.22",
]
docs = [
    "mkdocs-material>=9.1.8",
    "mkdocstrings-python>=0.9.0",
    "mkdocs-table-reader-plugin>=2.0",
]


[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
license = { text ="MIT License" }
requires-python = ">={{cookiecutter.python_requires}}"

authors = [
    { name="{{cookiecutter.project_author}}", email="{{cookiecutter.author_email}}"}
]

dependencies = [
]


[project.urls]
"Sourcecode" = "{{cookiecutter.project_github_url}}"
"Documentation" = "https://{{cookiecutter.github_owner}}.github.io/{{cookiecutter.project_slug}}/"


[tool.setuptools]
include-package-data = true
zip-safe = false


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests/*"]


[tool.check-manifest]
ignore = [
    "docs",
    "docs/**",
    "notebooks",
    "notebooks/**",
    ".pre-commit-config.yaml",
    ".gitignore",
    "noxfile.py",
    "mkdocs.yml",
]


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "--cov={{cookiecutter.project_slug}} --cov-report=html --verbose"


[tool.ruff]
line-length = 100
