[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
license = "MIT"
requires-python = ">={{cookiecutter.python_requires}}"

authors = [
    { name="{{cookiecutter.project_author}}", email="{{cookiecutter.author_email}}"}
]

dependencies = [
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "pytest-xdist>=3.8",
    "coverage>=7.14",
    "ruff>=0.15",
    "pre-commit>=4.6",
    "isort>=8.0",
    "pre-commit-hooks>=6.0",
    "ty>=0.0.38",
    "nox[uv]>=2026.4",
    "zensical>=0.0.43",
    "mkdocs-material>=9.7",
    "mkdocstrings>=1.0",
    "mkdocstrings-python>=2.0",
    "mkdocs-table-reader-plugin>=3.1",
]

[project.urls]
"Sourcecode" = "{{cookiecutter.project_github_url}}"
"Documentation" = "https://{{cookiecutter.github_owner}}.github.io/{{cookiecutter.project_slug}}/"
"Issues" = "{{cookiecutter.project_github_url}}/issues"


[tool.isort]
profile = "ruff"


[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests/"]
addopts = "--cov=src/{{cookiecutter.project_slug}} --cov-report=html --verbose"


[tool.ruff]
line-length = 100
target-version = "py{{cookiecutter.python_requires.replace('.', '')}}"
src = ["src", "tests"]
