[metadata]
name = {{cookiecutter.project_slug}}
version = 0.1.0
author = {{cookiecutter.project_author}}
email = {{cookiecutter.author_email}}
license = MIT License
description = {{cookiecutter.project_short_description}}
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown
url = https://github.com/chris-santiago/{{cookiecutter.project_slug}}
project_urls =
    Documentation = https://chris-santiago.github.io/{{cookiecutter.project_slug}}/

[options]
packages = find:
python_requires = >= {{cookiecutter.python_version}}
include_package_data = true
zip_safe = False
install_requires =

[options.packages.find]
exclude = tests

[options.extras_require]
docs = sphinx; furo; myst-parser
tests = nox; pytest; pytest-cov
qa = mypy; pylint; flake8; isort; check-manifest; pre-commit
build = twine; wheel; build

[flake8]
max-line-length = 100
exclude = tests/*, noxfile.py, docs/*
max-complexity = 10

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100

[mypy]
python_version = {{cookiecutter.python_version}}
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool:pytest]
testpaths = tests/
addopts = --cov={{cookiecutter.project_slug}} --cov-report=html --verbose

[check-manifest]
ignore =
    docs
    docs/**
    notebooks
    notebooks/**
    .pre-commit-config.yaml
    .gitignore
    .pylintrc
    Makefile
    noxfile.py

[pylint.master]
fail-under = 9.0
ignore-patterns = test
disable=
    # Disable these for scikit-learn style code
    invalid-name,
    attribute-defined-outside-init,

[pylint.format]
max-line-length = 100
max-module-lines = 1000

[pylint.similarities]
min-similarity-lines = 4
ignore-comments = yes
ignore-docstrings = yes
